--- a/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
@@ -70,7 +70,9 @@
         <div class="col-2" >
     <select name="type" class="form-control form-select" asp-items="@ViewBag.type"  >
     </select></div>
-    <div class="offset-1 col-1">
+     <partial name="_Pagination" />
+
+    <div class="col-1">
         <input type="submit" class="btn-secondary btn" onclick="go();" />
     </div>
 </div>
@@ -84,32 +86,32 @@
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-order="ID" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="ID" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model=>model.ID)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="Customer" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="Customer" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model => model.Customer)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="OrderDate" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderDate" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model => model.OrderDate)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="OrderTotal" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderTotal" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model => model.OrderTotal)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="OrderStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model => model.OrderStatus)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="PaymentStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="PaymentStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
                 @Html.DisplayNameFor(model => model.PaymentStatus)
                 </a>
             </th>
