--- a/Suaah/Areas/Admin/Views/Flights/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Flights/Index.cshtml
@@ -75,8 +75,9 @@
         <div class="col-2">
             <input name="cont" class="form-control" list="names" value="@ViewBag.cont" />
         </div>
+     <partial name="_Pagination" />
 
-        <div class="col-1">
+        <div class="offset-1 col-1">
             <input type="submit" class="btn btn-secondary" onclick="go();" />
         </div>
     </div>
@@ -88,12 +89,12 @@
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-order="DepartingGate" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="DepartingGate" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     @Html.DisplayNameFor(model => model.DepartingGate)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="ArriveGate" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="ArriveGate" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     @Html.DisplayNameFor(model => model.ArriveGate)
                 </a>
             </th>
@@ -101,22 +102,22 @@
                 @Html.DisplayNameFor(model => model.NumberOfStops)
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="LeaveTime" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="LeaveTime" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     @Html.DisplayNameFor(model => model.LeaveTime)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="Airline" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="Airline" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     @Html.DisplayNameFor(model => model.AirlineCode)
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="From" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="From" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     From
                 </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-order="To" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="To" asp-route-ordersort="@ViewBag.ordersort" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.types.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-conf="@ViewBag.conf" asp-route-cont="@ViewBag.cont">
                     To
                 </a>
             </th>
