--- a/Suaah/Areas/Admin/Views/Services/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Services/Index.cshtml
@@ -1,24 +1,64 @@
 ﻿@model IEnumerable<Suaah.Models.Services>
-
+@using Suaah.Data
+@inject ApplicationDbContext _context
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Services";
+
+    var services = _context.Services.ToList();
 }
 
-<h1>Index</h1>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Services</h1>
+</div>
+
+
 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
 {
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+    <div class="m-2 mb-5">
+        <a asp-action="Create" class="w-100 d-block btn btn-danger p-2">Create New Service</a>
+    </div>
 }
 
-<table class="table">
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color text-center p-3">
+
+        <input type="search" list="sName" name="sName" value="@ViewData["sName"]" placeholder="Service Name" class="p-2" />
+        <datalist id="sName">
+            @foreach (var item in services)
+            {
+                <option>@item.Name</option>
+            }
+        </datalist>
+
+        <partial name="_Pagination" />
+        <br />
+
+
+    </div>
+    <div>
+        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2 " style="width:100%" />
+    </div>
+    <br />
+</form>
+
+<div class="text-center">
+
+    <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
+</div>
+
+<table class="table table-hover table-striped text-center p-3">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                <a asp-action="Index"
+                   asp-route-sName="@ViewData["sName"]"
+                   asp-route-pageNumber="@ViewData["pageNumber"]"
+                   asp-route-pageSize="@ViewData["pageSize"]"
+                   asp-route-order="serv" asp-route-ordersort="@ViewBag.ordersort">
+                    @Html.DisplayNameFor(model => model.Name)
+                </a>
             </th>
-            <th></th>
+            <th>Operations</th>
         </tr>
     </thead>
     <tbody>
@@ -26,15 +66,18 @@
         {
             <tr>
                 <td>
+
                     @Html.DisplayFor(modelItem => item.Name)
+
                 </td>
                 <td>
                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
                     {
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span>|</span>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a><span>|</span>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                        <span>|</span>
                     }
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                 </td>
             </tr>
         }
