--- a/Suaah/Areas/Admin/Views/Airports/Create.cshtml
+++ b/Suaah/Areas/Admin/Views/Airports/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -33,6 +33,9 @@
                 <label asp-for="City" class="control-label"></label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+             <div class="form-group m-2">
+                Image:<input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
