--- a/Suaah/Areas/Admin/Views/Airports/Edit.cshtml
+++ b/Suaah/Areas/Admin/Views/Airports/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -35,9 +35,14 @@
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
+             <div class="form-group w-50">
+                <label asp-for="ImageUrl" class="control-label l"></label>
+                <input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+            
         </form>
     </div>
 </div>
