--- a/Suaah/Areas/Admin/Views/Hotels/Create.cshtml
+++ b/Suaah/Areas/Admin/Views/Hotels/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-8 m-auto">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group m-2">
                 <input asp-for="Name" class="form-control" placeholder="Name" />
@@ -34,6 +34,9 @@
             <div class="form-group m-2">
                 <input asp-for="Stars" rows="3" class="form-control" placeholder="Stars" />
                 <span asp-validation-for="Stars" class="text-danger"></span>
+            </div>
+            <div class="form-group m-2">
+                Image:<input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
             </div>
             <div class="form-group m-3 p-3">
                 <input type="submit" value="Create" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
