--- a/Suaah/Areas/Admin/Views/Hotels/Edit.cshtml
+++ b/Suaah/Areas/Admin/Views/Hotels/Edit.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row">
  <div class="col-md-8 m-auto">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
            
@@ -46,7 +46,10 @@
                 <input asp-for="Stars" rows="3" class="form-control" placeholder="Stars" />
                 <span asp-validation-for="Stars" class="text-danger"></span>
             </div>
-
+            <div class="form-group w-50">
+                <label asp-for="ImageUrl" class="control-label l"></label>
+                <input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
+            </div>
              <div class="form-group m-3 p-3">
                 <input type="submit" value="Save" class="btn btn-primary" /> || <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
