--- a/Suaah/Areas/Admin/Views/SocialDatas/Create.cshtml
+++ b/Suaah/Areas/Admin/Views/SocialDatas/Create.cshtml
@@ -4,35 +4,33 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>SocialData</h4>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Create Social Data</h1>
+</div>
 <hr />
+ 
 <div class="row">
-    <div class="col-md-4">
+        <div class="col-md-8 m-auto">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SocialName" class="control-label"></label>
-                <input asp-for="SocialName" class="form-control" />
+                <input asp-for="SocialName" class="form-control" placeholder="Social Name"/>
                 <span asp-validation-for="SocialName" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Link" class="control-label"></label>
-                <input asp-for="Link" class="form-control" />
+                <input asp-for="Link" class="form-control" placeholder="Social Link"/>
                 <span asp-validation-for="Link" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+             <div class="form-group m-3 p-3">
+                <input type="submit" value="Create" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+ 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
